# EnergyDiff-pub

./: .gitignore  README.md  pyproject.toml
configs/: exp_config.yaml  gpt2-12-s.yaml  gpt2-12.yaml  gpt2-24-s.yaml  gpt2-24.yaml  gpt2-6.yaml  gpt2-nano.yaml
scripts/bash/evaluation/: plot_frequency.sh  plot_hist.sh  plot_samples.sh  plot_samples_pv.sh  plot_scatter_marginal.sh  plot_umap.sh  test_heat_pump.sh  umap.sh
scripts/bash/postprocessing/: do_calibrate.sh
scripts/bash/sampling/: sample_ddpm.sh  sample_ddpm_progressive.sh
scripts/bash/training/: baseline.sh  debug_wpuq_1min.sh  exp_cossmic_grid.sh  exp_kernel_rf.sh  exp_lcl_1h.sh  exp_wpuq_trafo.sh
scripts/python/: init_time_id.py
scripts/python/evaluation/: create_umap_mapper.py  plot_cov_pl.ipynb  plot_cov_pl.py  plot_frequency.py  plot_hist.py  plot_samples.py  plot_samples_mean.py  plot_samples_pl.py  plot_samples_pv.py  plot_scatter_marginal.py  plot_umap.py  stdemo.py  test_all_metrics.py  test_metrics_bs.py  test_metrics_pl.py  test_metrics_ref.py
scripts/python/postprocessing/: do_calibrate.py
scripts/python/preprocessing/: preprocess_cossmic.py  preprocess_hp.py  preprocess_lcl.py  preprocess_wpuq_pv.py  process_lcl.py
scripts/python/sampling/: dpm-solver-sample.py  sample_baseline.py  sample_ddpm_conditional.py  sample_ddpm_pl.py  sample_ddpm_progressive.py  sample_gan_pl.py  sample_vae_pl.py
scripts/python/training/: exp_rf.py  kernel_rectified_flow.py  profile_ddpm_pl.py  train_copula_one_season.py  train_ddpm_conditional.py  train_ddpm_pl.py  train_gan_pl.py  train_gmm_one_season.py  (+1 more)
(+44 files in other folders)
