# pyproject.toml
[project]
name = "energydiff"
version = "2.7.0"
dependencies = [
    "numpy",
    "torch",
    "accelerate",
    "ema-pytorch",
    "einops",
    "matplotlib>=3.10.1",
    "pytorch-lightning>=2.5.1",
    "wandb>=0.19.8",
    "scipy>=1.15.2",
    "pandas>=2.2.3",
    "h5py>=3.13.0",
    "easy-ml-config>=1.0.4",
]
[dependency-groups]
dev = [
    "pytest",
    "numba==0.61", # important to make umap compatible
    "umap-learn>=0.5.7",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[tool.setuptools]
package-dir = {"" = "src"}
